@@ -2,6 +2,7 @@ package com.ahmadthesis.image.utils.config;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.convert.converter.Converter;
@@ -60,7 +61,8 @@ public class ResourceServerConfig {
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     CorsConfiguration config = new CorsConfiguration();
     config.setAllowedOrigins(Collections.singletonList("*"));
-    config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//    config.setAllowedOrigins(List.of("http://localhost:4200"));
+    config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
     config.setAllowedHeaders(Collections.singletonList("*"));
     source.registerCorsConfiguration("/**", config);
     return source;
